Fixed css issue with header on mobile and desktop dealing with z-index

--- a/src/css/layout.styl
+++ b/src/css/layout.styl
@@ -18,7 +18,7 @@ body
   height $headerHeight
   display flex
   width 100%
-  z-index 5
+  z-index 10
   left 0
   top 0
 
@@ -32,3 +32,5 @@ body
 @media (max-width: $mobileBreak)
   .map-container
     top 0
+  .app-header
+    z-index 5
